# noteholder

./: Cargo.toml  LICENSE  README.md  default.nix  shell.nix
noteholder/: Cargo.toml  build.rs
noteholder/src/: lib.rs
