[package]
name = "noteholder"
version = "0.1.0"
edition = "2021"
description = "Multi-note sustain pad MIDI generator"
homepage = ""

[lib]
# cdylib for the plugin shared library; lib for integration tests if any.
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug     = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
