[package]
name = "noteholder"
version = "0.1.0"
edition = "2021"
description = "Multi-note sustain pad MIDI generator"
homepage = "https://github.com/ARitz-Cracker/noteholder"

[lib]
# cdylib for the plugin shared library; lib for integration tests if any.
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug      = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
